polish version fin

--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
                 <a href="#timelapseGalery"><li>Galeria Timelapse</li></a>
         </ul>
             <form action="forms.txt" method="post" class="loginForm">
-                <div class="loginSpace"> <label for="login">Login:</label> <input type="text" name="login" class="login" placeholder="example@domain.org"> <br></div>
-                   <div class="passwordSpace"> <label for="password"> Password:</label> <input type="password" name="password" class="password" placeholder="password"> <br></div>
+                <div class="loginSpace"> <label for="login">Login:</label> <input type="text" name="login" class="login" placeholder="przykłąd@domena.org"> <br></div>
+                   <div class="passwordSpace"> <label for="password"> Hasło:</label> <input type="password" name="password" class="password" placeholder="hasło"> <br></div>
                    <div class="buttonsSpace"> 
-                     <input type="submit" value="Log in" class="submitCredentials"> 
+                     <input type="submit" value="Zaloguj" class="submitCredentials"> 
                      or 
-                     <a href="createAccount.html"><input type="button" value="Create new account" class="createAccountButton"></a>
+                     <a href="createAccount.html"><input type="button" value="Stwórz nowe konto" class="createAccountButton"></a>
                  </div>
                     
                </form>
@@ -73,8 +73,8 @@
         <article>
             <header>
                 <img src="images/brain.jpg" alt="brain" class="brain">
-            <h1>Tilemapses are fun and simple in production, but they are consuming so much time.</h1>
-            <h1>They are so simple, that everyone can make them, even without advanced cameras.</h1>
+            <h1>Tilemapsy to ciekawe i proste zajęcie, które niestety wymaga większej ilości czasu.</h1>
+            <h1>Są na tyle proste, że każdy jest w stanie je stworzyć, nawet bez użycia zaawansowanych kamer.</h1>
             </header>
                 
                 <section class="cloud" id="cloud1"><div class="cloudName">Urządzenie</div> <div class="cloud1 easing">
