--- a/createAccount.html
+++ b/createAccount.html
@@ -56,14 +56,14 @@
         
         <form action="forms.txt" method="post" class="registryForm">
         <fieldset>
-            <legend><h1>Get free account</h1>
-                <h3>in less than 2 minutes!</h3></legend>
-                <div class="name"><input type="text" name="newName" id="newName" placeholder="Name" required></div>
-                <div class="surname"><input type="text" name="newSurname" id="newSurname" placeholder="Surname" required></div>
-                <div class="contact"><input type="text" name="newContanct" id="newContact" placeholder="Email adress or mobile number" required></div>
-                <div class="newPassword"><input type="password" name="newPassword" id="newPassword" placeholder="New password" required></div>
+            <legend><h1>Stwórz nowe konto</h1>
+                <h3>w niecałe dwie minuty!</h3></legend>
+                <div class="name"><input type="text" name="newName" id="newName" placeholder="Imie" required></div>
+                <div class="surname"><input type="text" name="newSurname" id="newSurname" placeholder="Nazwisko" required></div>
+                <div class="contact"><input type="text" name="newContanct" id="newContact" placeholder="Adres email lub numer telefonou" required></div>
+                <div class="newPassword"><input type="password" name="newPassword" id="newPassword" placeholder="Nowe hasło" required></div>
                 <div class="birth">
-                    <p class="birthDate">Birth date:</p>
+                    <p class="birthDate">Data urodzenia:</p>
                     <select name="birthDay" id="birthDay">
                         <option value="1">1</option>
                         <option value="2">2</option>
@@ -98,18 +98,18 @@
                         <option value="31">31</option>
                     </select>
                     <select name="birthMonth" id="birthMonth">
-                        <option value="1">January</option>
-                        <option value="2">February</option>
-                        <option value="3">March</option>
-                        <option value="4">April</option>
-                        <option value="5">May</option>
-                        <option value="6">June</option>
-                        <option value="7">July</option>
-                        <option value="8">August</option>
-                        <option value="9">October</option>
-                        <option value="10">Noveber</option>
-                        <option value="11">September</option>
-                        <option value="12">December</option>
+                        <option value="1">Styczeń</option>
+                        <option value="2">Luty</option>
+                        <option value="3">Marzec</option>
+                        <option value="4">Kwiecień</option>
+                        <option value="5">Maj</option>
+                        <option value="6">Czerwiec</option>
+                        <option value="7">Lipiec</option>
+                        <option value="8">Sierpień</option>
+                        <option value="9">Wrzesień</option>
+                        <option value="10">Październik</option>
+                        <option value="11">Listopad</option>
+                        <option value="12">Grudzień</option>
                     </select>
                     <select name="birthYear" id="birthYear">
                        
@@ -239,14 +239,14 @@
                 </div>
 
                 <div class="sex">
-                    <p>Sex:</p>
-                    <div class="inputs"><input type="radio" name="sex" id="male" value="male"> <label for="male" >Male</label></div>
-                    <div class="inputs"><input type="radio" name="sex" id="female" value="female"> <label for="female" >Female</label></div>
-                    <div class="inputs"><input type="radio" name="sex" id="Other" value="Other"> <label for="Other" >Other</label></div>
+                    <p>Płeć:</p>
+                    <div class="inputs"><input type="radio" name="sex" id="male" value="male"> <label for="male" >Mężczyzna</label></div>
+                    <div class="inputs"><input type="radio" name="sex" id="female" value="female"> <label for="female" >Kobieta</label></div>
+                    <div class="inputs"><input type="radio" name="sex" id="Other" value="Other"> <label for="Other" >Inne</label></div>
                 </div>
         </fieldset>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt, commodi consequuntur ratione id sint quasi adipisci quam. Voluptas sunt, ea veritatis sit rem ut vitae harum voluptatem eos tempore id?</p>
-        <button id="registryButton">Registry</button>
+        <button id="registryButton">Zarejestruj się</button>
     </form>
     </section>
    
