small code style updates

--- a/index.html
+++ b/index.html
@@ -9,25 +9,54 @@
     <link rel="stylesheet" href="style.css">
     <script src="script.js" async></script>
 </head>
+
 <body>
     <!-- TOP PANEL - LOGO & DROPDOWN MENU -->
     <nav class="pageNavigation">
         <h1 class="logo"> <a href="index.html" id="logoLink">myClouds</a></h1>
         <div class="menuWrapper">
             <ul>
-                <a href="#intro"><li>Pomysł na hobby</li></a>
-                <li class="timelapseDIYList">Timelapse- zrób to sam! <p class="timelapseTriangle">&#128710;</p>
+                <li>
+                    <a href="#intro">
+                        Pomysł na hobby
+                    </a>
+                </li>
+
+                <li class="timelapseDIYList">
+                    Timelapse- zrób to sam!
+                    <p class="timelapseTriangle">&#9650;</p>
+
                     <ul class="timelapseDIY">
-                        <a href="#cloud1"> <li>Urządzenie</li> </a>
-                        <a href="#cloud2"> <li>Statyw na nasze urządzenie</li> </a>
-                        <a href="#cloud3"> <li>Czas</li> </a>
-                        <a href="#cloud4"> <li>Obiekt naszego nagrania</li> </a>
+                        <li>
+                            <a href="#cloud1">
+                                Urządzenie
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#cloud2">
+                                Statyw na nasze urządzenie
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#cloud3">
+                                Czas
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#cloud4">
+                                Obiekt naszego nagrania
+                            </a>
+                        </li>
                         <a href="#cloud5"> <li>Program do obróbki</li> </a>
                         <a href="#cloud6"> <li>Alternatywna metoda</li> </a>
                     </ul>
                 </li>
-                <a href="#timelapseGalery"><li>Galeria Timelapse</li></a>
-        </ul>
+                <li>
+                    <a href="#timelapseGalery">
+                        Galeria Timelapse
+                    </a>
+                </li>
+            </ul>
             <form action="forms.txt" method="post" class="loginForm">
                 <div class="loginSpace"> <label for="login">Login:</label> <input type="text" name="login" class="login" placeholder="przykłąd@domena.org"> <br></div>
                    <div class="passwordSpace"> <label for="password"> Hasło:</label> <input type="password" name="password" class="password" placeholder="hasło"> <br></div>
@@ -104,7 +133,7 @@
                         <p>mniejsze jak roślina, większe jak cały krajobraz- nasz cel, element który chcemy uchwycić "na szybko"</p>
                         <img src="images/object.svg" alt="camera" class="stepsImages">
                     </div>
-                    
+
                     </div></div>
                 <div class="cloud" id="cloud5"><div class="cloudName">Obróbka</div> <div class="cloud5 easing">
                     
